package ambiente;

/**
 * Enumera os tipos de obstáculos possíveis.
 * @author  Vitor Akio Isawa
 * @version 1.0
 * @since   2025-06
 * @reviewer Laura Bianchi
 */
public enum TipoObstaculo {
  PEDRA,
  ARVORE,
  AGUA,
  BURACO
}
