package ambiente.mapa;

/**
 * Enumera os tipos de entidades presentes no ambiente.
 * @author  Vitor Akio Isawa
 * @version 1.0
 * @since   2025-06
 * @reviewer Laura Bianchi
 */
public enum TipoEntidade {
  LIVRE,
  ROBO,
  OBSTACULO
}
