package comunicacao.excecoes;

/**
 * Exceção lançada para ações não permitidas.
 * @author  Vitor Akio Isawa
 * @version 1.0
 * @since   2025-06
 * @reviewer Laura Bianchi
 */
public class AcaoNaoPermitidaException extends Exception {
  // ...implementação futura...
}
