package comunicacao.excecoes;

/**
 * Exceção lançada em caso de erro de comunicação.
 * @author  Vitor Akio Isawa
 * @version 1.0
 * @since   2025-06
 * @reviewer Laura Bianchi
 */
public class ErroComunicacaoException extends Exception {
  // ...implementação futura...
}
