package comunicacao.excecoes;

/**
 * Exceção lançada quando o mapa não está definido.
 * @author  Vitor Akio Isawa
 * @version 1.0
 * @since   2025-06
 * @reviewer Laura Bianchi
 */
public class MapaIndefinidoException extends Exception {
  // ...implementação futura...
}
