package missao;

/**
 * Interface funcional para robôs exploradores.
 * @author  Vitor Akio Isawa
 * @version 1.0
 * @since   2025-06
 * @reviewer Laura Bianchi
 */
@FunctionalInterface
public interface Explorador {
  void explorar();
}
