package robo.aereo;

import robo.RoboAereo;

/**
 * Robô aéreo do tipo carga.
 * @author  Vitor Akio Isawa
 * @version 1.0
 * @since   2025-06
 * @reviewer Laura Bianchi
 */
public class RoboCarga extends RoboAereo {
  public RoboCarga(String nome) {
    super(nome);
  }
}
