package robo.aereo;

import robo.RoboAereo;

/**
 * Robô aéreo do tipo drone.
 * @author  Vitor Akio Isawa
 * @version 1.0
 * @since   2025-06
 * @reviewer Laura Bianchi
 */
public class RoboDrone extends RoboAereo {
  public RoboDrone(String nome) {
    super(nome);
  }
}
