package robo.terrestre;

import robo.RoboTerrestre;

/**
 * Robô terrestre do tipo tanque.
 * @author  Vitor Akio Isawa
 * @version 1.0
 * @since   2025-06
 * @reviewer Laura Bianchi
 */
public class RoboTanque extends RoboTerrestre {
  public RoboTanque(String nome) {
    super(nome);
  }
}
